--- a/frontend/oasys/src/pages/senior/SeniorTalk.css
+++ b/frontend/oasys/src/pages/senior/SeniorTalk.css
@@ -13,16 +13,17 @@
     padding: 30px 60px;
     margin-top: 20px;
     cursor: pointer;
-    background-color: #222222;
-    color: white;
+    background-color: transparent;
+    color: black;
     border: none;
     border-radius: 5px;
     transition: background-color 0.3s ease;
-    font-size: 30px;
+    font-size: 50px;
+    font-weight:bold;
 }
 
 .btnRecord:hover {
-    background-color: #444444;
+    background-color: transparent;
 }
 
 .answerText {
