--- a/frontend/oasys/src/pages/senior/SeniorTalk.css
+++ b/frontend/oasys/src/pages/senior/SeniorTalk.css
@@ -20,6 +20,7 @@
     transition: background-color 0.3s ease;
     font-size: 50px;
     font-weight:bold;
+    z-index: 2;
 }
 
 .btnRecord:hover {
