--- a/frontend/oasys/src/pages/senior/SeniorTalk.css
+++ b/frontend/oasys/src/pages/senior/SeniorTalk.css
@@ -1,7 +1,7 @@
 .seniorTalkContainer {
     position: relative;
     text-align: center;
-    height: 100vh; 
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -19,7 +19,7 @@
     border-radius: 5px;
     transition: background-color 0.3s ease;
     font-size: 50px;
-    font-weight:bold;
+    font-weight: bold;
     z-index: 2;
 }
 
@@ -29,60 +29,61 @@
 
 .answerText {
     font-size: 90px;
-    font-weight:bold;
-    font-family: Tahoma;
+    font-weight: bold;
 }
 
-
-.ocean { 
+.ocean {
     height: 15%;
-    width:100%;
-    position:absolute;
-    bottom:0;
-    left:0;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
     background: #e5552f;
-  }
-  
-  .wave {
-    background: url('./wave.svg') repeat-x; 
+}
+
+.wave {
+    background: url("./wave.svg") repeat-x;
     position: absolute;
     top: -198px;
     width: 6400px;
     height: 198px;
-    animation: wave 7s cubic-bezier( 0.36, 0.45, 0.63, 0.53) infinite;
+    animation: wave 7s cubic-bezier(0.36, 0.45, 0.63, 0.53) infinite;
     transform: translate3d(0, 0, 0);
-  }
-  
-  .wave:nth-of-type(2) {
+}
+
+.wave:nth-of-type(2) {
     top: -175px;
-    animation: wave 7s cubic-bezier( 0.36, 0.45, 0.63, 0.53) -.125s infinite, swell 7s ease -1.25s infinite;
+    animation:
+        wave 7s cubic-bezier(0.36, 0.45, 0.63, 0.53) -0.125s infinite,
+        swell 7s ease -1.25s infinite;
     opacity: 1;
-  }
-  
-  @keyframes wave {
+}
+
+@keyframes wave {
     0% {
-      margin-left: 0;
+        margin-left: 0;
     }
     100% {
-      margin-left: -1600px;
+        margin-left: -1600px;
     }
-  }
-  
-  @keyframes swell {
-    0%, 100% {
-      transform: translate3d(0,-25px,0);
+}
+
+@keyframes swell {
+    0%,
+    100% {
+        transform: translate3d(0, -25px, 0);
     }
     50% {
-      transform: translate3d(0,5px,0);
+        transform: translate3d(0, 5px, 0);
     }
-  }
+}
 
-  .leftGif {
+.leftGif {
     position: absolute;
     left: 0;
     top: 50%;
-    transform: translateY(-50%);  /* Center the GIF vertically */
-    width: auto;  /* Adjust width as needed */
-    height: 700px;  /* Adjust height as needed */
-    z-index: 1;  /* Ensure the GIF stays behind other content */
+    transform: translateY(-50%); /* Center the GIF vertically */
+    width: auto; /* Adjust width as needed */
+    height: 700px; /* Adjust height as needed */
+    z-index: 1; /* Ensure the GIF stays behind other content */
 }
